--- a/TRAVEL JOURNAL.html
+++ b/TRAVEL JOURNAL.html
@@ -46,6 +46,8 @@
     <p>Date: October 1, 2024</p>
     <p>This was my first trip to Paris! I visited the Eiffel Tower, enjoyed delicious pastries, and explored the charming streets of Montmartre. The view from the top of the tower was breathtaking!</p>
 </article>
+    <button>ADD</button>
+    <button>Remove</button>
 
 <article>
     <h2>Destination: Tokyo</h2>
@@ -53,6 +55,9 @@
     <p>Date: October 10, 2024</p>
     <p>Tokyo was an incredible experience! I loved the vibrant culture, the food, and the mix of traditional and modern architecture. Don't miss the cherry blossoms in spring!</p>
 </article>
+    <button>ADD</button>
+    <button>Remove</button>
+
 
 <article>
     <h2>Destination:Spain</h2>
@@ -60,6 +65,9 @@
     <p>Date: October 10, 2024</p>
     <p>Spain was an good country,Peoples are very kind and beautiful and the places really wonderful</p>
 </article>
+   <button>ADD</button>
+    <button>Remove</button>
+
 
 
 <footer>
